@@ -8,6 +8,7 @@
 * Braintree Blue: Return CC token in transaction hash [cyu]
 * Robokassa: Fix signature for empty amount [ukolovda]
 * Worldpay gateway: Fix error messages for some failures [duff]
+* Worldpay gateway: Allow settled payments to be refunded [dougal]
 
 == Version 1.31.1 (February 25, 2013)
 
